<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            app:title="@string/addStudent"
            app:titleCentered="true"
            app:titleTextColor="@color/black"
            app:titleTextAppearance="@style/ToolbarTitleStyle"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/form">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/firstName"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/border"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/lastName"
                    android:textSize="18sp"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/border"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:hint="@string/album"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/border"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeWidthFocused="2dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_album"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_addStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/addStudent"
                    app:icon="@android:drawable/ic_menu_save"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:iconTint="@color/black"
                    android:backgroundTint="@color/studentItem" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>